--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "es2020"
     ],
     "module": "commonjs",
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": false,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
