--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "npm run clean && tsc",
-    "clean": "rm -rf dist",
+    "build": "tsc",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
