--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "format": "prettier -w 'src/**/*.ts' 'demo/**/*.ts'",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "@types/mkdirp": "^1.0.0",
     "@types/node": "^14.0.9",
     "@types/request": "^2.48.5",
+    "prettier": "2.4.1",
     "typescript": "^4.4.3"
   }
 }
